feat(engine): integrate compartment engine phases 5-13